CKA/network-policy/f-b-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-f-b
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      name: mysql

  ingress:
    - from:
       - podSelector:
           matchLabels:
             role: backend

      ports:
       - protocol: TCP
         port: 3306
